[package]
name = "defcon-rs"
version = "0.2.0"
authors = ["Enterprisey <apersonwiki@gmail.com>"]
edition = "2018"

[dependencies]
mediawiki = "0.3.1"
chrono = "0.4.11"
regex = "1.3.6"
lazy_static = "1.4.0"
config = "0.15.11"
serde_json = "1.0.51"
tokio = { version = "1.45.0", features = ["full"] }
openssl = { version = '0.10', features = [ "vendored" ] }

[profile.release]
lto = "fat"
codegen-units = 1
