[package]
name = "defcon"
version = "0.2.0"
authors = ["Enterprisey <apersonwiki@gmail.com>"]
edition = "2018"

[dependencies]
mw = { git = "https://github.com/fee1-dead/mw" }
reqwest = { version = "0.12.7", features = ["rustls-tls"], default-features = false }
chrono = "0.4.11"
regex = "1.3.6"
lazy_static = "1.4.0"
config = "0.15.11"
serde_json = "1.0.51"
tokio = { version = "1.45.0", features = ["full"] }
openssl = { version = '0.10', features = [ "vendored" ] }
serde = { version = "1.0.219", features = ["derive"] }
futures-util = "0.3.31"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
color-eyre = "0.6.4"

[profile.release]
lto = "fat"
codegen-units = 1
